client on waiting list gets a reservation